@@ -46,6 +46,7 @@ int  readCheck(s_filearea *echo, s_link *link);
 int  writeCheck(s_filearea *echo, ps_addr aka);
 int  sendToLinks(int isToss, s_filearea *filearea, s_ticfile *tic, const char *filename);
 int  parseTic(char *ticfile,s_ticfile *tic);
+void doSaveTic(char *ticfile,s_ticfile *tic, s_filearea *filearea);
 
 
 #endif
