@@ -51,6 +51,7 @@ Changes between htick-1.0-stable and htick-1.4-stable
    - set 'Loc' flag on messages from FileFix.
    - fixed crash while clean on passthrough areas with -p defined
    - replace char 026 in ldesc to space. some programs think that 026 is EOF.
+   - save tics when hatch files
 
 
 
